--- a/templates/_index.html
+++ b/templates/_index.html
@@ -43,7 +43,7 @@
         <div id="app"></div>
         <script>
             $(function () {
-                $("#app").load("index.html");
+                $("#app").load("app.html");
             });
         </script>
     </body>
