--- a/templates/_index.html
+++ b/templates/_index.html
@@ -36,14 +36,9 @@
             content="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/logo.png"
         />
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <div id="app"></div>
-        <script>
-            $(function () {
-                $("#app").load("app.html");
-            });
-        </script>
+        <script src="bundle.js" type="module"></script>
     </body>
 </html>
