Updated build system

--- a/templates/_meta.html
+++ b/templates/_meta.html
@@ -4,11 +4,41 @@
 	content="Mathematics, physics, computer science. Exploring the world through math with a heavy emphasis on a visual intuition."
 />
 
+<!-- {/* open graph */} -->
+<meta name="og:title" content="funnyscar" />
+<meta name="og:type" content="website" />
+<meta name="og:url" content="http://www.funnyscar.com/" />
+<meta name="og:image" content="https://bucket.funnyscar.com/logo.png" />
+<meta name="og:site_name" content="funnyscar" />
+<meta
+	name="og:description"
+	content="Mathematics, physics, computer science. Exploring the world through math with a heavy emphasis on a visual intuition."
+/>
+
 <meta name='og:title' content='funnyscar' />
 <meta name='og:url' content='http://www.funnyscar.com/' />
 <meta name='og:image' content='https://bucket.funnyscar.com/logo.png' />
 <meta name='og:site_name' content='funnyscar' />
 <meta name='og:description' content='Mathematics, physics, computer science. Exploring the world through math with a heavy emphasis on a visual intuition.' />
+<meta property="twitter:url" content="https://funnyscar.com/" />
+<meta property="twitter:title" content="funnyscar" />
+<meta
+	property="twitter:description"
+	content="Mathematics, physics, computer science. Exploring the world through math with a heavy emphasis on a visual intuition."
+/>
+<meta
+	property="twitter:image"
+	content="https://bucket.funnyscar.com/riemann-surfaces.png"
+/>
+
+<!-- {/* google */} -->
+<meta
+	name="news_keywords"
+	content="math, mathematics, physics, computer science, graphics, visual math, Curtis Hu, curtisjhu, funnyscar"
+/>
+
+<!-- twitter -->
+<meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://funnyscar.com/" />
 <meta property="twitter:title" content="funnyscar" />
 <meta
