--- a/templates/_index.html
+++ b/templates/_index.html
@@ -69,6 +69,6 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="bundle.js" type="module"></script>
+        <script src="bundle.js"></script>
     </body>
 </html>
