I think fixed again?

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -29,7 +29,7 @@
 
         <!-- {/* apple */} -->
         <meta name="apple-mobile-web-app-title" content="funnyscar" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-touch-fullscreen" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <meta name="format-detection" content="telephone=no" />
@@ -69,6 +69,6 @@
     </head>
     <body>
         <div id="app"></div>
-        <script src="bundle.js"></script>
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
