--- a/templates/_index.html
+++ b/templates/_index.html
@@ -35,7 +35,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta
             name="viewport"
-            content="width=device-width; width = 320; initial-scale=1.0; maximum-scale=1.0; user-scalable=yes; target-densitydpi=160dpi"
+            content="width=device-width, width=320, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes, target-densitydpi=160dpi"
         />
 
         <link
